--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ p {
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg, rgba(43, 92, 230, 0.1) 0%, rgba(6, 182, 212, 0.1) 100%),
-                url('/imagens/casal-clientes.png') center/cover no-repeat;
+                url('../imagens/casal-clientes.png') center/cover no-repeat;
     z-index: -1;
 }
 
